--- a/hw2/HotelBookingForm.html
+++ b/hw2/HotelBookingForm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Booking Form</title>
+    <link rel="stylesheet" href="FormStyle.css">
   </head>
   <body>
     <h1>Hotel Booking Form</h1>
